erDiagram
    USERS {
        int id
        string name
        string email
        string phone
        string address
        string role
    }

    PROVINCES {
        int id
        string name
        string slug
    }

    DISTRICTS {
        int id
        int province_id
        int district_type_id
        string name
    }

    DISTRICT_TYPES {
        int id
        string name
    }

    STOPS {
        int id
        int district_id
        string name
        string address
    }

    ROUTES {
        int id
        int province_start_id
        int province_end_id
        string name
        string slug
        int distance_km
        int price_default
        string available_hotel_pickup
    }

    ROUTE_STOPS {
        int id
        int route_id
        int stop_id
        string stop_type
        int priority
    }

    BUSES {
        int id
        string name
        int seat_count
        string seat_map
    }

    TRIPS {
        int id
        int bus_id
        int route_id
        string start_time
        string end_time
        int price
        string is_active
    }

    BOOKINGS {
        int id
        string booking_code
        int user_id
        int trip_id
        string booking_date
        string customer_name
        string customer_phone
        int pickup_stop_id
        int dropoff_stop_id
        int quantity
        int total_price
        string status
        string payment_method
        string payment_status
    }

    WEB_PROFILES {
        int id
        string profile_name
    }

    MENUS {
        int id
        string name
        int parent_id
    }

    USERS ||--o{ BOOKINGS : makes
    TRIPS ||--o{ BOOKINGS : has
    BUSES ||--o{ TRIPS : runs
    ROUTES ||--o{ TRIPS : defines
    ROUTES ||--o{ ROUTE_STOPS : has
    STOPS ||--o{ ROUTE_STOPS : used_in
    PROVINCES ||--o{ DISTRICTS : contains
    DISTRICTS ||--o{ STOPS : contains
    ROUTES }|..|{ PROVINCES : start_end
    STOPS ||--o{ BOOKINGS : pickup_dropoff
